# Storage-Shed

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  readme.md
helper_scripts/: linux_run_tests.sh  linux_start_podman.sh  win32_run_tests.sh
modules/: DatabaseConnection.hpp
modules/sqlite/: CMakeLists.txt  SqliteConnection.hpp
src/: CMakeLists.txt
src/main/: CMakeLists.txt  DatabaseConnection.h++
src/main/mariadb/: CMakeLists.txt  MariaDBConnection.c++  MariaDBConnection.h++
src/main/sqlite/: CMakeLists.txt  SqliteConnection.c++  SqliteConnection.cpp  SqliteConnection.h++
src/test/: CMakeLists.txt  SqliteConnectionTest.c++  TestRunner.c++
src/test/MariaDBConnection/: ConnectionTests.c++  GetAllDataTests.c++  GetMetaDataTests.c++  PerformQueryTests.c++  TestHelpFunctions.h++  TestRunner.c++  TransactionTests.c++
src/test/MariaDBConnection/ConnectionInformation/: ToJDBCStringTest.c++
src/test/SqliteConnection/: ConnectionTests.c++  GetAllDataTests.c++  GetMetaDataTests.c++  PerformUpdateTests.c++  TransactionTests.c++  performQueryTests.c++  validateTests.c++
src/test/print_helper/: CMakeLists.txt  PrintHelper.c++  PrintHelper.h++
test/: CMakeLists.txt  SqliteConnectionTest.cpp
toolchains/: windows.toolchain
